fixed gap in footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body{
 .grid{
 display: grid;
 grid-template-columns: 1fr 2fr 2fr;
+grid-gap:65px;
 }
 
 section{
@@ -84,7 +85,7 @@ footer p{
 font-family: Poppins;
 font-size: 16px;
 opacity: 0.7;
-margin-right:20px; 
+
 font-weight: 400;
 line-height: 24px;
 }
